--- a/style.css
+++ b/style.css
@@ -123,3 +123,181 @@ background: linear-gradient(90deg, rgba(19,5,46,1) 0%, rgba(20,0,59,1) 10%, rgba
     
     }
 } */
+
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"] {
+    -webkit-appearance: none;
+}
+*{  
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+.form-container{
+    font-family: "Poppins";
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0 10% 5rem;
+}
+::placeholder{
+    color: #000000;
+    
+}
+.form-container h1{
+    padding-top: 2em;
+    color: #fff;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .12em; /* Adjust as needed */
+    animation: typing 7.5s steps(40, end);
+}
+.form-container p{
+    color: #fefefe;
+    text-align: center;
+    font-weight: 440;
+}
+.form-container p span{
+    font-weight: bold;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: larger;
+}
+.form-container input{
+    height: 2.5rem;
+    border-radius: 10px;
+    padding-left: 1.25rem;
+    border: 1px solid grey;
+    background: rgba(255, 255, 255, 0.5);
+    color: rgb(34, 33, 33);
+    transition: .2s ease;
+
+}
+.form-container input:focus{
+    border: none;
+}
+.form-container textarea{
+    border-radius: 10px;
+    border: 1px solid grey;
+    padding: 1rem 0 0 1rem ;
+    color: rgb(34, 33, 33);
+    background: rgba(255, 255, 255, 0.5);
+}
+.form-container button{
+    font-size: 15px;
+    font-weight: 500;
+    color: black;
+    height: 45px;
+    width: 100%;
+    border: none;
+    border-radius: 30px;
+    outline: none;
+    background: rgba(255, 255, 255, 0.7);
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
+.form-container button:hover{
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 1px 5px 7px 1px rgba(0, 0, 0, 0.2);
+}
+.cus{
+    font-family: "Poppins"!important;
+    font-style: normal;
+}
+.cui{
+    position: relative;
+    top: 1rem;
+    text-align: start;
+    font-family: "poppins";
+    color: #fff;
+    font-size: 1.1112em;
+}
+.joinbtn{
+    display: block;
+    text-align: center;
+    margin: 10px auto 50px auto;
+}
+.joinbtn a {
+    color: #fff;
+    text-decoration: none;
+    font-family: "Poppins";
+    font-weight: 500;
+    display: inline-block;
+    text-align: center;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    font-size: 19px; /* Base size for smaller screens */
+    margin-top: 10px;
+    padding: 10px 20px;
+    transition: color 0.3s;
+    overflow: hidden;
+    position: relative;
+  }
+.joinbtn a span{
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(35, 21, 3, 0.582);
+    z-index: -2;
+    transition: 0.3s;
+}
+.joinbtn a:hover span{
+    width: 100%; 
+}
+label {
+    color: red;
+    text-align: start;
+    margin: -10px 0;
+    display: flex;
+}
+
+.mail-us {
+    padding: 0 10% 5rem;
+}
+.mail-us h2{
+    color: #fff;
+    text-align: center;
+}
+.mail-us p{
+    color: #fefefe;
+    text-align: center;
+    font-weight: 440;
+}
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+/* Loading Screen Animation */
+
+#loading-overlay {
+    position: fixed; /* Covers the entire viewport */
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh; /* Fills the entire screen */
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: flex; /* Center the content vertically and horizontally */
+    justify-content: center;
+    align-items: center;
+    z-index: 999; /* Ensure loading overlay appears above other elements */
+  }
+  
+  #alert-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center the alert popup */
+    z-index: 1000; /* Ensure alert popup appears above other elements */
+  }
+  
