--- a/style.css
+++ b/style.css
@@ -23,14 +23,8 @@ header {
 background: linear-gradient(90deg, rgba(19,5,46,1) 0%, rgba(20,0,59,1) 10%, rgba(21,0,61,1) 50%, rgba(13,0,43,1) 68%, rgba(10,0,35,1) 88%, rgba(8,0,24,1) 96%,rgba(8,0,24,1) 100%);
     /* background: rgb(255,0,61);
     background: linear-gradient(90deg, rgba(255,0,61,1) 3%, rgba(115,0,255,1) 50%, rgba(255,0,78,1) 100%); */
-}  
-@media (min-width: 786px) {
-    .navbar{
-        position: relative;
-        display: contents;        
-    }
-}
-
+} 
+  
 .ntext {
     font-family: 'Cinzel Decorative';
     font-weight: 550;
@@ -131,6 +125,16 @@ margin: 40px auto 60px;
     margin-top: 7em;
     padding-right: 1.5em;
 }
+#achiv-left{
+    text-align: center;
+    text-decoration: underline white;
+    margin-bottom: 2em;
+}
+
+#achiv ul li{
+    color: #fff;
+    line-height: 1.5em;
+}
 
 @media (min-width: 768px) {
     .welc h1{
@@ -139,6 +143,25 @@ margin: 40px auto 60px;
     .welc h2{
       font-size: 6em;
     }
+}
+/* Style for laptop screens */
+@media (min-width: 1024px) {
+    .navbar{
+        position: relative;
+        display: contents;
+    }
+    #achiv-left{
+        text-align: start;
+        text-decoration: none;
+    }
+    #achiv-right{
+        padding-left: 20.5em;
+    }
+    #achiv ul li{
+        color: #fff;
+        line-height: 3.5em;
+    }
+          
 }
 
 
