--- a/style.css
+++ b/style.css
@@ -145,6 +145,94 @@ nav {
 #abtsec .row ,#edu .row, #exp .row, #skills{
 margin: 40px auto 60px; 
 }
+.container-proj{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    overflow:hidden;
+}
+.container-proj h1{
+    color: white;
+}
+.cards-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: space-evenly;
+}
+.proj-cards{
+    display: flex;
+    background-color: #000000;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 25px;
+    border: solid 1.2px blueviolet;
+    border-radius: 20px;
+    width: 17em;
+    height: 25em;
+    cursor: pointer;
+    transition: .3s ease;
+}
+.proj-cards:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 3px whitesmoke;
+}
+.cards-container:hover .proj-cards {
+  transform: scale(0.95);
+  transition: 0.3s ease;
+}
+
+/* Keep the hovered one scaled up */
+.cards-container .proj-cards:hover {
+  transform: scale(1.1);
+}
+.proj-banner{
+    text-align: center;
+    color: #000; 
+    background-color: blueviolet;
+}
+.proj-banner h6{
+    margin: 2.5rem;
+}
+.img-card{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 90%;
+    height: 85.948px;
+    border: solid 1.2px blueviolet;
+    border-radius: 10px;
+}
+.cards-container .proj-cards:nth-child(1) .img-card{
+    background-image: url(images/portfolio.png);
+}
+.cards-container .proj-cards:nth-child(2) .img-card{
+    background-image: url(images/indbritz.jpg);
+}
+.cards-container .proj-cards:nth-child(3) .img-card{
+    background-image: url(images/christnet.png);
+}
+.cards-container .proj-cards:nth-child(4) .img-card{
+    background-image: url(images/aeda.jpg);
+}
+.proj-details{
+    color: #fefefe;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: .5rem;
+}
+.proj-details a{
+    color: #fefefe;
+    text-decoration: none;
+}
+.proj-details a span{
+    font-size: 15px;
+    color: blueviolet;
+}
+.proj-details p{
+    font-size: medium;
+}
 #edu h1, #exp h1{
     text-align: center;
 }
