--- a/style.css
+++ b/style.css
@@ -205,13 +205,13 @@ margin: 40px auto 60px;
     border-radius: 10px;
 }
 .cards-container .proj-cards:nth-child(1) .img-card{
-    background-image: url(images/portfolio.png);
+    background-image: url(images/portfolio.jpg);
 }
 .cards-container .proj-cards:nth-child(2) .img-card{
     background-image: url(images/indbritz.jpg);
 }
 .cards-container .proj-cards:nth-child(3) .img-card{
-    background-image: url(images/christnet.png);
+    background-image: url(images/christnet.jpg);
 }
 .cards-container .proj-cards:nth-child(4) .img-card{
     background-image: url(images/aeda.jpg);
