--- a/public/style.css
+++ b/public/style.css
@@ -52,6 +52,11 @@ nav {
     backdrop-filter: blur(.151rem);
     padding: 20px;
 }
+@media screen and (max-width:800px){
+    .banner-text{
+        width: 90%;
+    }
+}
 .link-icons{
     border: solid white 1px;
     border-radius: 20px;
